# pipewire-static

./: meson.build  meson_options.txt
spa/include/spa/support/: log.h  plugin.h
spa/plugins/support/: meson.build  plugin.c
spa/plugins/videoconvert/: meson.build  plugin.c
src/: meson.build
src/modules/: meson.build  module-adapter.c  module-client-device.c  module-client-node.c  module-metadata.c  module-protocol-native.c  module-session-manager.c
src/modules/module-adapter/: adapter.c
src/modules/module-client-node/: client-node.c  protocol-native.c  remote-node.c
src/modules/module-protocol-native/: connection.c  local-socket.c  protocol-footer.c  protocol-native.c  security-context.c  test-connection.c
src/pipewire/: impl-module.c  impl-module.h  meson.build  pipewire.c
